Complete layout Order and API Order

--- a/AppMilkteaShop/app/src/main/res/layout/activity_cart.xml
+++ b/AppMilkteaShop/app/src/main/res/layout/activity_cart.xml
@@ -181,6 +181,7 @@
                 </LinearLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/btnCheckout"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_margin="16dp"
