--- a/AppMilkteaShop/app/src/main/res/layout/cart_lineitem.xml
+++ b/AppMilkteaShop/app/src/main/res/layout/cart_lineitem.xml
@@ -49,8 +49,7 @@
             app:imageUrl="@{viewHolderCart.imgUrl}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/pizza1" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvTitleCart"
