--- a/AppMilkteaShop/app/src/main/res/layout/milktea_lineitem.xml
+++ b/AppMilkteaShop/app/src/main/res/layout/milktea_lineitem.xml
@@ -29,8 +29,7 @@
             android:layout_margin="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/pizza1" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvTitleCart"
