--- a/AppMilkteaShop/app/src/main/res/layout/activity_home.xml
+++ b/AppMilkteaShop/app/src/main/res/layout/activity_home.xml
@@ -24,6 +24,7 @@
             android:id="@+id/scrollView3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -143,6 +144,7 @@
                             app:layout_constraintTop_toTopOf="@+id/imvBanner" />
 
                         <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/ctOrderNow"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/orange_background"
@@ -226,6 +228,7 @@
         </ScrollView>
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/coordinatorLayout3"
             android:layout_width="match_parent"
             android:layout_height="58dp"
             app:layout_constraintBottom_toBottomOf="parent"
