--- a/AppMilkteaShop/app/src/main/res/layout/cart_lineitem.xml
+++ b/AppMilkteaShop/app/src/main/res/layout/cart_lineitem.xml
@@ -11,7 +11,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="5dp"
@@ -22,14 +22,13 @@
             android:id="@+id/tvTopping"
             android:layout_width="270dp"
             android:layout_height="48dp"
+            android:layout_marginTop="5dp"
             android:text="@{viewHolderCart.toppings}"
             android:textSize="14dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tvTotalEachItem"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
 
         <ImageView
             android:id="@+id/btnDel"
@@ -43,8 +42,8 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="140dp"
+            android:layout_height="150dp"
             android:layout_margin="4dp"
             app:imageUrl="@{viewHolderCart.imgUrl}"
             app:layout_constraintBottom_toBottomOf="parent"
